--- a/packages/amplication-client/src/Entities/fields/TextField.css
+++ b/packages/amplication-client/src/Entities/fields/TextField.css
@@ -23,4 +23,5 @@
 .text-field textarea {
   font: inherit;
   width: 100%;
+  box-sizing: border-box;
 }
